samples/_failures_safe/1761317076_e23112_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_377110b4.c: In function ‘main’:
./samples/SAFE/__tmp_377110b4.c:146:5: error: expected declaration or statement at end of input
  146 |     for (int i = 0; i < log_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_377110b4.c:146:5: error: expected declaration or statement at end of input
